<resources>
    <string name="app_name">Smart Health</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Chat</string>
    <string name="tab_text_2">Useful Information</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_logout">Logout</string>
    <string name="search_title">Search</string>
    <string name="chat">Chat</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="common_sti">Human papillomavirus infection
An infection that causes warts in various parts of the body, depending on the strain.
Genital herpes
A common sexually transmitted infection marked by genital pain and sores.
Chlamydia
A common sexually transmitted infection that may not cause symptoms.
Gonorrhea
A sexually transmitted bacterial infection that, if untreated, may cause infertility.
HIV/AIDS
HIV causes AIDS and interferes with the body's ability to fight infections.
Syphilis
A bacterial infection usually spread by sexual contact that starts as a painless sore.</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="newsAPIKey">ac525b80287b45faba0c9e587035da52</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
